fix spacing issue for downloads

--- a/app/assets/stylesheets/components/_song_index_item.scss
+++ b/app/assets/stylesheets/components/_song_index_item.scss
@@ -8,6 +8,12 @@
   top: 1px;
 }
 
+.util-section{
+  position: relative;
+  bottom: 9px;
+  margin-bottom: 15px;
+}
+
 .song-player {
   margin-top: 10px;
   display:inline-block;
